# PrettyBad8

./: .gitmodules  CMakeLists.txt  README.txt  prepare_imgui.py
sources/: main.cpp
sources/clock/: clock.h
sources/config_parser/: config_parser.cpp  config_parser.h
sources/dynarec/: dynarec.cpp  dynarec.h
sources/emu/: debugger_ui.cpp  debugger_ui.h  emu.cpp  emu.h
sources/gui/: debugger_ui.cpp  debugger_ui.h  ui.cpp  ui.h
sources/render/: simple_renderer.cpp  simple_renderer.h
sources/vm/: debugger.cpp  debugger.h  debugger_n.cpp  debugger_n.h  draw.cpp  draw.h  ui.cpp  ui.h  vm.cpp  vm.h
